--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.4",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
